Fixed bug where IE 10 wouldn't render the last button group properly in inline mode due to wrapping.

--- a/js/tinymce/skins/lightgray/FlowLayout.less
+++ b/js/tinymce/skins/lightgray/FlowLayout.less
@@ -15,3 +15,7 @@
 .mce-flow-layout {
 	white-space: normal;
 }
+
+.mce-tinymce-inline .mce-flow-layout {
+	white-space: nowrap;
+}
